--- a/packages/global/components/site-header.marko
+++ b/packages/global/components/site-header.marko
@@ -16,7 +16,7 @@ $ const navigation = {
   attrs=input.attrs
 >
   <${input.aboveNav} />
-  <default-theme-site-navbar modifiers=["primary"]>
+  <default-theme-site-navbar modifiers=["primary"] attrs={ "aria-label": "Primary Navigation" }>
     <default-theme-site-navbar-items
       items=navigation.primary
       modifiers=["primary"]
@@ -25,7 +25,7 @@ $ const navigation = {
     />
   </default-theme-site-navbar>
 
-  <default-theme-site-navbar modifiers=["secondary"]>
+  <default-theme-site-navbar modifiers=["secondary"] attrs={ "aria-label": "Secondary Navigation" }>
 
 
     <default-theme-site-navbar-brand title=`${config.website("name")} Homepage`>
