Add role & aria-label to ‘Most Popular Block’…
templates/index & templates/content/index files

--- a/sites/content.nrwa.org/server/templates/index.marko
+++ b/sites/content.nrwa.org/server/templates/index.marko
@@ -19,6 +19,7 @@ $ const { site } = out.global;
   </@section>
 
   <@section>
-    <theme-client-side-most-popular-block />
-  </@section>
+    <div role="region" aria-label="Most Popular Stories">
+      <theme-client-side-most-popular-block />
+    </div>  </@section>
 </global-website-section-home-layout>
