--- a/sites/content.nrwa.org/server/templates/content/index.marko
+++ b/sites/content.nrwa.org/server/templates/content/index.marko
@@ -7,6 +7,8 @@ $ const { id, type, pageNode, ...rest } = input;
   ...rest
 >
   <@section>
-    <theme-client-side-most-popular-block />
+    <div role="region" aria-label="Most Popular Stories">
+      <theme-client-side-most-popular-block />
+    </div>
   </@section>
 </global-content-default-layout>
