Use theme components

--- a/packages/global/components/layouts/content/company-details.marko
+++ b/packages/global/components/layouts/content/company-details.marko
@@ -16,26 +16,26 @@ $ const fields = ["title", "website"];
 $ if (showEmail) fields.push("publicEmail");
 $ const showFields = fields.some(k => content[k]);
 
-<default-theme-page-contact-details|{ blockName }|
+<theme-page-contact-details|{ blockName }|
   tag=input.tag
   class=input.class
   modifiers=input.modifiers
   attrs=input.attrs
 >
   <if(showAddress)>
-    <default-theme-content-contact-details-section block-name=blockName>
+    <theme-content-contact-details-section block-name=blockName>
       <address class=`${blockName}__address`>
         <marko-web-content-address1 block-name=blockName obj=content />
         <marko-web-content-address2 block-name=blockName obj=content />
         <marko-web-content-city-state-zip block-name=blockName obj=content />
         <marko-web-content-country block-name=blockName obj=content />
       </address>
-    </default-theme-content-contact-details-section>
+    </theme-content-contact-details-section>
   </if>
 
 
   <if(showFields)>
-    <default-theme-content-contact-details-section block-name=blockName>
+    <theme-content-contact-details-section block-name=blockName>
       <if(content.publicEmail)>
         <div class=`${blockName}__field`>
           <span class=`${blockName}__label`>Email:</span>
@@ -48,24 +48,24 @@ $ const showFields = fields.some(k => content[k]);
           <marko-web-content-website block-name=blockName obj=content link=true />
         </div>
       </if>
-    </default-theme-content-contact-details-section>
+    </theme-content-contact-details-section>
   </if>
 
   <if(showSocial)>
-    <default-theme-content-contact-details-section block-name=blockName modifiers=["social-links"]>
+    <theme-content-contact-details-section block-name=blockName modifiers=["social-links"]>
       <for|item| of=socialLinks>
-        <default-theme-social-icon-link
+        <theme-social-icon-link
           label=item.label
           provider=item.provider
           href=item.url
           modifiers=["dark", "lg"]
         />
       </for>
-    </default-theme-content-contact-details-section>
+    </theme-content-contact-details-section>
   </if>
 
   <if(showPhones)>
-    <default-theme-content-contact-details-section block-name=blockName>
+    <theme-content-contact-details-section block-name=blockName>
       <if(content.phone)>
         <div class=`${blockName}__field`>
           <span class=`${blockName}__label`>Phone:</span>
@@ -90,7 +90,7 @@ $ const showFields = fields.some(k => content[k]);
           <marko-web-content-fax block-name=blockName obj=content />
         </div>
       </if>
-    </default-theme-content-contact-details-section>
+    </theme-content-contact-details-section>
   </if>
 
-</default-theme-page-contact-details>
+</theme-page-contact-details>
