--- a/packages/global/components/site-header-2.marko
+++ b/packages/global/components/site-header-2.marko
@@ -22,7 +22,7 @@ $ const headerColClass = promo ? "col-lg-4" : "col-lg-6";
 >
   <${input.aboveNav} />
 
-  <default-theme-site-navbar modifiers=["top"] attrs={ "aria-label": "Top Navigation" }>
+  <theme-site-navbar modifiers=["top"] attrs={ "aria-label": "Top Navigation" }>
     <if(promo)>
       <div class=`${headerColClass} site-navbar__left`>
         $ const promoSrc = get(promo, "image.src");
@@ -50,13 +50,13 @@ $ const headerColClass = promo ? "col-lg-4" : "col-lg-6";
       </div>
     </if>
     <div class=`${headerColClass} site-navbar__center`>
-      <default-theme-site-navbar-brand title=`${config.website("name")} Homepage`>
-        <default-theme-site-navbar-logo
+      <theme-site-navbar-brand title=`${config.website("name")} Homepage`>
+        <theme-site-navbar-logo
           alt=config.website("name")
           src=site.get("logos.navbar.src")
           srcset=site.getAsArray("logos.navbar.srcset").join(",")
         />
-      </default-theme-site-navbar-brand>
+      </theme-site-navbar-brand>
     </div>
     <div class=`${headerColClass} site-navbar__right`>
       <marko-web-link href="/search">
@@ -72,15 +72,15 @@ $ const headerColClass = promo ? "col-lg-4" : "col-lg-6";
         icon-name="three-bars"
       />
     </div>
-  </default-theme-site-navbar>
+  </theme-site-navbar>
 
-  <default-theme-site-navbar modifiers=["primary"] attrs={ "aria-label": "Primary Navigation" }>
-    <default-theme-site-navbar-items
+  <theme-site-navbar modifiers=["primary"] attrs={ "aria-label": "Primary Navigation" }>
+    <theme-site-navbar-items
       items=navigation.primary
       modifiers=["primary"]
       reg-enabled=input.regEnabled
       has-user=input.hasUser
     />
-  </default-theme-site-navbar>
+  </theme-site-navbar>
   <${input.belowNav} />
 </marko-web-block>
