--- a/packages/global/components/site-header.marko
+++ b/packages/global/components/site-header.marko
@@ -16,28 +16,28 @@ $ const navigation = {
   attrs=input.attrs
 >
   <${input.aboveNav} />
-  <default-theme-site-navbar modifiers=["primary"] attrs={ "aria-label": "Primary Navigation" }>
-    <default-theme-site-navbar-items
+  <theme-site-navbar modifiers=["primary"] attrs={ "aria-label": "Primary Navigation" }>
+    <theme-site-navbar-items
       items=navigation.primary
       modifiers=["primary"]
       reg-enabled=input.regEnabled
       has-user=input.hasUser
     />
-  </default-theme-site-navbar>
+  </theme-site-navbar>
 
-  <default-theme-site-navbar modifiers=["secondary"] attrs={ "aria-label": "Secondary Navigation" }>
+  <theme-site-navbar modifiers=["secondary"] attrs={ "aria-label": "Secondary Navigation" }>
 
 
-    <default-theme-site-navbar-brand title=`${config.website("name")} Homepage`>
-      <default-theme-site-navbar-logo
+    <theme-site-navbar-brand title=`${config.website("name")} Homepage`>
+      <theme-site-navbar-logo
         alt=config.website("name")
         src=site.get("logos.navbar.src")
         srcset=site.getAsArray("logos.navbar.srcset").join(",")
       />
       <p>Content Portal</p>
-    </default-theme-site-navbar-brand>
+    </theme-site-navbar-brand>
 
-    <default-theme-site-navbar-items
+    <theme-site-navbar-items
       items=navigation.secondary
       modifiers=["secondary"]
       reg-enabled=input.regEnabled
@@ -52,7 +52,7 @@ $ const navigation = {
       icon-name="three-bars"
     />
     <!-- <marko-web-browser-component name="ThemeNewsletterToggleButton" ssr=true /> -->
-  </default-theme-site-navbar>
+  </theme-site-navbar>
 
 
   <${input.belowNav} />
