--- a/packages/global/components/layouts/content/company.marko
+++ b/packages/global/components/layouts/content/company.marko
@@ -60,7 +60,7 @@ $ const { $projectsGraphQL } = out.global;
               serviceInformation,
               warrantyInformation
             } = content;
-          <default-theme-page-contents|{ blockName }| attrs={ "data-gallery-id": id }>
+          <theme-page-contents|{ blockName }| attrs={ "data-gallery-id": id }>
             $ const bodyId = `content-body-${content.id}`;
             <marko-web-content-body block-name=blockName obj=content attrs={ id: bodyId } />
             <if(trainingInformation)>
@@ -88,7 +88,7 @@ $ const { $projectsGraphQL } = out.global;
                 <b>Warranty Information:</b> ${warrantyInformation}
               </div>
             </if>
-          </default-theme-page-contents>
+          </theme-page-contents>
         </div>
 
         <marko-web-node-list block-name="read-next" modifiers=["featured"]>
@@ -96,7 +96,7 @@ $ const { $projectsGraphQL } = out.global;
             Featured Videos
           </@header>
           <@nodes|{ nodes }| nodes=videos block-name="read-next" modifiers=["featured"]>
-            <default-theme-card-deck-flow cols=3 nodes=nodes modifiers=[]>
+            <theme-card-deck-flow cols=3 nodes=nodes modifiers=[]>
               <@slot|{ node, index }|>
                 <theme-youtube-card-node
                   node=node
@@ -109,7 +109,7 @@ $ const { $projectsGraphQL } = out.global;
                   }
                 />
               </@slot>
-            </default-theme-card-deck-flow>
+            </theme-card-deck-flow>
           </@nodes>
           <@footer block-name="read-next" modifiers=["featured"]>
             $ const url = get(content, "youtube.url");
