--- a/packages/global/components/layouts/content/default.marko
+++ b/packages/global/components/layouts/content/default.marko
@@ -44,13 +44,13 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast", "press-release
           <theme-author-published-node author=authors[0] content=content />
         </if>
         <else-if(authors.length > 1)>
-          <default-theme-content-attribution obj=content elements=["authors"] />
+          <theme-content-attribution obj=content elements=["authors"] />
         </else-if>
       </if>
       <if(displayPublishedDate && authors.length !== 1)>
-        <default-theme-page-dates|{ blockName }|>
+        <theme-page-dates|{ blockName }|>
           <theme-content-published-node block-name=blockName obj=content />
-        </default-theme-page-dates>
+        </theme-page-dates>
       </if>
       <global-sponsored-section-logo alias=primarySection.alias modifiers=["content-page"] class="mt-3" />
     </div>
@@ -59,7 +59,7 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast", "press-release
   <@section|{ aliases, content, authors }|>
     $ const { primarySection } = content;
     <div class="content-page-body" role="region" aria-label="Content Body">
-      <default-theme-page-contents|{ blockName }| attrs={ "data-gallery-id": id }>
+      <theme-page-contents|{ blockName }| attrs={ "data-gallery-id": id }>
         <if(content.embedCode)>
           <marko-web-content-embed-code block-name=blockName obj=content />
         </if>
@@ -145,10 +145,10 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast", "press-release
         </marko-web-identity-x-access>
 
         <if(type === "document" || type === "whitepaper")>
-          <default-theme-content-download obj=content>
+          <theme-content-download obj=content>
             <@wufoo user-name=site.get("wufoo.userName") />
             <@link class="btn btn-primary" />
-          </default-theme-content-download>
+          </theme-content-download>
         </if>
         <if(type !== "contact")>
           <for|author| of=authors>
@@ -181,7 +181,7 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast", "press-release
             published=content.published
           />
         </if>
-      </default-theme-page-contents>
+      </theme-page-contents>
     </div>
   </@section>
 
