--- a/packages/global/components/layouts/content/media-gallery.marko
+++ b/packages/global/components/layouts/content/media-gallery.marko
@@ -26,14 +26,14 @@ $ const sections = getAsArray(input, "sections");
       <theme-content-page-breadcrumbs section=primarySection />
       <marko-web-content-name tag="h1" block-name=blockName obj=content />
 
-      <default-theme-content-attribution obj=content elements=["company"] />
+      <theme-content-attribution obj=content elements=["company"] />
     </div>
   </@section>
 
   <@section|{ aliases, content, authors }|>
     $ const { primarySection } = content;
     <div class="content-page-body">
-      <default-theme-page-contents|{ blockName }| attrs={ "data-gallery-id": id }>
+      <theme-page-contents|{ blockName }| attrs={ "data-gallery-id": id }>
         <global-image-slider
           modifiers=["project-gallery"]
           images=getAsArray(content, "images.edges").map(edge => edge.node)
@@ -56,7 +56,7 @@ $ const sections = getAsArray(input, "sections");
           providers=["print", "facebook", "linkedin", "twitter", "pinterest"]
           print-path=`/print/content/${content.id}`
         />
-      </default-theme-page-contents>
+      </theme-page-contents>
     </div>
   </@section>
 
