--- a/packages/global/components/magazine/flows/magazine-issue-archive.marko
+++ b/packages/global/components/magazine/flows/magazine-issue-archive.marko
@@ -4,9 +4,9 @@ $ const { aliases } = input;
 $ const nodes = getAsArray(input, "nodes");
 
 <if(nodes.length)>
-  <default-theme-card-deck-flow nodes=nodes modifiers=input.modifiers cols=4>
+  <theme-card-deck-flow nodes=nodes modifiers=input.modifiers cols=4>
     <@slot|{ node }|>
       <global-magazine-issue-archive-node node=node flush=input.flush with-title=input.withTitle />
     </@slot>
-  </default-theme-card-deck-flow>
+  </theme-card-deck-flow>
 </if>
