--- a/packages/global/components/site-footer.marko
+++ b/packages/global/components/site-footer.marko
@@ -1,4 +1,4 @@
-import getNavItems from "@parameter1/base-cms-marko-web-theme-default/components/site-navbar/utils/get-nav-items";
+import getNavItems from "@parameter1/base-cms-marko-web-theme-monorail/components/site-navbar/utils/get-nav-items";
 import { asObject } from "@parameter1/base-cms-utils";
 
 $ const { config, site } = out.global;
@@ -14,18 +14,18 @@ $ const tagline = site.get("tagline");
   modifiers=input.modifiers
   attrs=input.attrs
 >
-  <default-theme-site-footer-container block-name=blockName modifiers=["secondary"] attrs={ "aria-label": "Secondary Footer" }>
+  <theme-site-footer-container block-name=blockName modifiers=["secondary"] attrs={ "aria-label": "Secondary Footer" }>
     <marko-web-element block-name=blockName name="inner-container">
 
-      <default-theme-site-navbar-brand block-name=blockName title=`${config.website("name")} Homepage`>
-        <default-theme-site-navbar-logo
+      <theme-site-navbar-brand block-name=blockName title=`${config.website("name")} Homepage`>
+        <theme-site-navbar-logo
           block-name=blockName
           alt=config.website("name")
           src=site.get("logos.footer.src")
           srcset=site.getAsArray("logos.footer.srcset").join(",")
           lazyload=true
         />
-      </default-theme-site-navbar-brand>
+      </theme-site-navbar-brand>
 
       <if(tagline)>
         <marko-web-element block-name=blockName name="tagline" modifiers="tagline">${tagline}</marko-web-element>
@@ -74,7 +74,7 @@ $ const tagline = site.get("tagline");
             <marko-web-block name=navBlockName class="col-6">
               $ const topics = site.getAsArray("navigation.footer.topics");
               <if(topics.length)>
-                <default-theme-site-menu-section
+                <theme-site-menu-section
                   tag="nav"
                   block-name=navBlockName
                   label="Topics"
@@ -87,7 +87,7 @@ $ const tagline = site.get("tagline");
             <marko-web-block name=navBlockName class="col-6">
               $ const more = site.getAsArray("navigation.footer.more");
               <if(more.length)>
-                <default-theme-site-menu-section
+                <theme-site-menu-section
                   tag="nav"
                   block-name=navBlockName
                   label="More"
@@ -103,8 +103,8 @@ $ const tagline = site.get("tagline");
       </div>
 
     </marko-web-element>
-  </default-theme-site-footer-container>
-  <default-theme-site-footer-container block-name=blockName modifiers=["primary"] attrs={ "aria-label": "Primary Footer" }>
+  </theme-site-footer-container>
+  <theme-site-footer-container block-name=blockName modifiers=["primary"] attrs={ "aria-label": "Primary Footer" }>
     <marko-web-element block-name=blockName name="inner-container">
 
       <!-- $ const imageHost = config.website("imageHost");
@@ -128,10 +128,10 @@ $ const tagline = site.get("tagline");
         </for>
       </theme-breadcrumbs>
 
-      <default-theme-site-footer-copyright
+      <theme-site-footer-copyright
         company=site.get("company")
         notice=site.get("copyrightNotice")
       />
     </marko-web-element>
-  </default-theme-site-footer-container>
+  </theme-site-footer-container>
 </marko-web-block>
