--- a/packages/global/templates/dynamic-page/index.marko
+++ b/packages/global/templates/dynamic-page/index.marko
@@ -25,12 +25,12 @@ $ const { id, type, pageNode } = input;
   <@section|{ blockName, content }|>
     $ const { primarySection } = content;
     <div class="content-page-body">
-      <default-theme-page-contents|{ blockName }| attrs={ "data-gallery-id": id }>
+      <theme-page-contents|{ blockName }| attrs={ "data-gallery-id": id }>
 
         $ const bodyId = `content-body-${content.id}`;
         <marko-web-content-body block-name=blockName obj=content attrs={ id: bodyId } />
 
-      </default-theme-page-contents>
+      </theme-page-contents>
     </div>
   </@section>
 
