--- a/packages/global/components/layouts/content/default.marko
+++ b/packages/global/components/layouts/content/default.marko
@@ -72,7 +72,7 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast", "press-release
           $ if (type === "video") forceDisplay = "none";
           <theme-primary-image-block
             obj=content.primaryImage
-            force-display=forceDisplay;
+            force-display=forceDisplay
           />
         </else-if>
 
