--- a/sites/content.nrwa.org/server/styles/index.scss
+++ b/sites/content.nrwa.org/server/styles/index.scss
@@ -9,7 +9,7 @@ $theme-site-header-breakpoints: (
 // Colors
 $primary: #103a57;
 
-@import "../../node_modules/@rogue-monkey-media/package-global/scss/core";
+@import "@rogue-monkey-media/package-global/scss/core";
 
 .page {
   &--content-company {
