--- a/packages/global/components/layouts/website-section/feed.marko
+++ b/packages/global/components/layouts/website-section/feed.marko
@@ -44,8 +44,9 @@ $ const perPage = 18;
     </if>
 
     <marko-web-website-section-name|{ value }| tag="h1" block-name=blockName obj=section>
-      <if(p.page > 1)>${value}: Page ${p.page}</if>
-      <else>${value}</else>
+      $ const title = value === 'Home' ? 'More Articles' : value;
+      <if(p.page > 1)>${title}: Page ${p.page}</if>
+      <else>${title}</else>
     </marko-web-website-section-name>
 
     <if(input.afterName)>
@@ -115,10 +116,11 @@ $ const perPage = 18;
       <@query-params limit=5 skip=p.skip({ perPage, skip: 13 }) />
     </theme-section-feed-block>
     <theme-section-feed-block|{ totalCount }| alias=alias count-only=true>
+      $ const path = alias === 'home' ? 'more-articles' : alias;
       <theme-pagination-controls
         per-page=perPage
         total-count=totalCount
-        path=alias
+        path=path
       />
     </theme-section-feed-block>
   </@section>
