Add content-page-gate css

--- a/packages/global/scss/core.scss
+++ b/packages/global/scss/core.scss
@@ -89,6 +89,7 @@
 @import "@parameter1/base-cms-marko-web-theme-monorail/scss/components/comments";
 /*! critical:start|content */
 @import "@parameter1/base-cms-marko-web-theme-monorail/scss/components/content-page";
+@import "@parameter1/base-cms-marko-web-theme-monorail/scss/components/content-page-gate";
 @import "@parameter1/base-cms-marko-web-theme-monorail/scss/components/embedded-media";
 /*! critical:end */
 @import "@parameter1/base-cms-marko-web-theme-monorail/scss/components/identity-x";
