Update identity-x-identify component call
Use new marko-web-identity-x-identity component.

--- a/packages/global/components/document.marko
+++ b/packages/global/components/document.marko
@@ -50,7 +50,7 @@ $ const {
 
     <${input.head} />
 
-    <identity-x-identify />
+    <marko-web-identity-x-identify />
 
     <!-- start gtm -->
     <marko-web-gtm-start />
