--- a/packages/global/components/layouts/content/default.marko
+++ b/packages/global/components/layouts/content/default.marko
@@ -13,7 +13,7 @@ $ const displayPrimaryImage = ["media-gallery"].includes(type) ? false : true;
 $ const displayPublishedDate = ["company", "contact", "whitepaper"].includes(type) ? false : true;
 $ const displayReadNext = showReadNextBlock && ["article"].includes(type);
 $ const displaySocialShare = ["contact"].includes(type) ? false : true;
-$ const displayComments = ["contact"].includes(type) ? false : true;
+$ const displayComments = false; // ["contact"].includes(type) ? false : true;
 <!-- $ const displayNewsletterSignup = ["contact"].includes(type) ? false : true; -->
 $ const displayNewsletterSignup = false;
 $ const shouldInjectAds = ["article", "video", "news", "podcast", "press-release"].includes(type);
