Add suport for mediaOS and disabling GAM
GAM.enabled = false in conjuction with the addtion of the <mos-creative> tag and script inclusion should get them a demoable staging env.

--- a/packages/global/components/document.marko
+++ b/packages/global/components/document.marko
@@ -83,5 +83,8 @@ $ const {
     <else>
       <global-site-footer />
     </else>
+    <if(!GAM || (GAM && !GAM.enabled))>
+      <script type="module" src="https://mos-scripts.com/a/main.js"></script>
+    </if>
   </@below-container>
 </marko-web-document>
