--- a/packages/global/components/layouts/content/default.marko
+++ b/packages/global/components/layouts/content/default.marko
@@ -2,7 +2,7 @@ import { get, getAsArray } from "@parameter1/base-cms-object-path";
 import defaultValue from "@parameter1/base-cms-marko-core/utils/default-value";
 import getContentPreview from "@parameter1/base-cms-marko-web-theme-monorail/utils/get-content-preview";
 
-$ const { site } = out.global;
+$ const { site, GAM } = out.global;
 $ const { id, type, pageNode, ...rest } = input;
 $ const sections = getAsArray(input, "sections");
 
@@ -16,7 +16,7 @@ $ const displaySocialShare = ["contact"].includes(type) ? false : true;
 $ const displayComments = false; // ["contact"].includes(type) ? false : true;
 <!-- $ const displayNewsletterSignup = ["contact"].includes(type) ? false : true; -->
 $ const displayNewsletterSignup = false;
-$ const shouldInjectAds = ["article", "video", "news", "podcast", "press-release"].includes(type);
+$ const shouldInjectAds = GAM && GAM.enabled && ["article", "video", "news", "podcast", "press-release"].includes(type);
 
 <global-content-wrapper-layout
   id=id
@@ -25,12 +25,18 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast", "press-release
   ...rest
 >
   <@section|{ aliases }| modifiers=["break-container", "first-sm"]>
-    <theme-gam-define-display-ad
-      name="leaderboard"
-      position="content_page"
-      aliases=aliases
-      modifiers=["inter-block", "combined-leaderboard"]
-    />
+    <if(GAM && GAM.enabled)>
+      <theme-gam-define-display-ad
+        name="leaderboard"
+        position="content_page"
+        aliases=aliases
+        modifiers=["inter-block", "combined-leaderboard"]
+      />
+    </if>
+    <else>
+      <mos-creative />
+    </else>
+
   </@section>
 
   <@section|{ blockName, content, aliases, authors }| modifiers=["content-header"]>
@@ -182,12 +188,17 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast", "press-release
 
   <if(showBottomAdBlock)>
     <@section|{ aliases }|>
-      <theme-gam-define-display-ad
-        name="rotation"
-        position="content_page"
-        aliases=aliases
-        modifiers=["inter-block"]
-      />
+      <if(GAM && GAM.enabled)>
+        <theme-gam-define-display-ad
+          name="rotation"
+          position="content_page"
+          aliases=aliases
+          modifiers=["inter-block"]
+        />
+      </if>
+      <else>
+        <mos-creative />
+      </else>
     </@section>
   </if>
 
