--- a/packages/global/templates/magazine/issue.marko
+++ b/packages/global/templates/magazine/issue.marko
@@ -30,12 +30,17 @@ $ const perPage = 50;
     <marko-web-resolve-page|{ data: issue }| node=pageNode>
       <marko-web-page-wrapper class="mb-block">
         <@section|{ aliases }|>
-          <theme-gam-define-display-ad
-            name="leaderboard"
-            position="magazine_page"
-            aliases=aliases
-            modifiers=["inter-block"]
-          />
+          <if(GAM && GAM.enabled)>
+            <theme-gam-define-display-ad
+              name="leaderboard"
+              position="magazine_page"
+              aliases=aliases
+              modifiers=["inter-block"]
+            />
+          </if>
+          <else>
+            <mos-creative />
+          </else>
         </@section>
           <@section>
             <div class="row">
