Add suport for mediaOS and disabling GAM
GAM.enabled = false in conjuction with the addtion of the <mos-creative> tag and script inclusion should get them a demoable staging env.

--- a/packages/global/components/layouts/website-section/feed.marko
+++ b/packages/global/components/layouts/website-section/feed.marko
@@ -172,4 +172,17 @@ $ const perPage = 18;
       />
     </@section>
   </for>
+  <@section|{ aliases }|>
+    <if(GAM && GAM.enabled)>
+      <theme-gam-define-display-ad
+        name="rotation"
+        position="section_page"
+        aliases=aliases
+        modifiers=["inter-block"]
+      />
+    </if>
+    <else>
+      <mos-creative />
+    </else>
+  </@section>
 </global-website-section-default-layout>
