Add missing setting of GAM off out.global

--- a/packages/global/components/layouts/website-section/products.marko
+++ b/packages/global/components/layouts/website-section/products.marko
@@ -3,7 +3,7 @@ import { getAsArray } from "@parameter1/base-cms-object-path";
 $ const { id, alias, name, pageNode } = input;
 $ const sections = getAsArray(input, "sections");
 
-$ const { pagination: p } = out.global;
+$ const { pagination: p, GAM } = out.global;
 $ const perPage = 10;
 
 <global-website-section-default-layout
