--- a/packages/global/templates/content/contact.marko
+++ b/packages/global/templates/content/contact.marko
@@ -3,7 +3,7 @@ import queryFragment from "@parameter1/base-cms-marko-web-theme-monorail/graphql
 
 $ const { id, type, pageNode } = data;
 
-$ const { pagination: p, req } = out.global;
+$ const { pagination: p, req, GAM } = out.global;
 $ const perPage = 10;
 
 <global-content-wrapper-layout
