--- a/packages/global/templates/magazine/issue.marko
+++ b/packages/global/templates/magazine/issue.marko
@@ -2,7 +2,7 @@ import { getAsObject } from "@parameter1/base-cms-object-path";
 import issueFragment from "@parameter1/base-cms-marko-web-theme-monorail-magazine/graphql/fragments/magazine-issue-archive";
 import contentListFragment from "@parameter1/base-cms-marko-web-theme-monorail/graphql/fragments/content-list"
 
-$ const { site, pagination: p } = out.global;
+$ const { site, pagination: p, GAM } = out.global;
 $ const { id, pageNode } = data;
 $ const perPage = 50;
 
