add css to prevent duplicate inbody ads

--- a/sites/content.nrwa.org/server/styles/index.scss
+++ b/sites/content.nrwa.org/server/styles/index.scss
@@ -161,5 +161,10 @@ $primary: #103a57;
 .ad-container--inline-content {
   background-color: $white;
 }
+.page-contents__content-body .ad-container--inline-content +.ad-container--inline-content {
+  display: none;
+  height: 0;
+  width: 0;
+}
 
 /*! critical:end */
