--- a/packages/global/components/layouts/content/components/content-body-with-injection.marko
+++ b/packages/global/components/layouts/content/components/content-body-with-injection.marko
@@ -9,7 +9,7 @@ $ const aliases = getAsArray(input, 'aliases');
 $ const bodyId = `content-body-${content.id}`;
 $ const withLeadersBlock = defaultValue(input.withLeadersBlock, true);
 <!-- disabled by default for not until we figure out hiding of one over the other -->
-$ const withMobileLeaderBoard = defaultValue(input.withLeadersBlock, false);
+$ const withMobileLeaderBoard = defaultValue(input.withLeadersBlock, true);
 
 $ const desktopCounts = [1000, 2750, 4500, 6250, 8000, 9750, 11500, 13250, 15000, 16750, 18500];
 $ const mobileCounts = (withMobileLeaderBoard) ? [900, 1650, 2950, 4250, 5550, 6850, 8150, 9450, 10750, 12050, 13350, 14650, 15950, 17250] : [250, 900, 1650, 2950, 4250, 5550, 6850, 8150, 9450, 10750, 12050, 13350, 14650, 15950, 17250];
