--- a/packages/global/components/layouts/content/default.marko
+++ b/packages/global/components/layouts/content/default.marko
@@ -1,10 +1,24 @@
 import { get, getAsArray } from "@parameter1/base-cms-object-path";
 import defaultValue from "@parameter1/base-cms-marko-core/utils/default-value";
 import getContentPreview from "@parameter1/base-cms-marko-web-theme-monorail/utils/get-content-preview";
+import { shouldOverlay, restrictContentByReg, shouldTruncate } from "@parameter1/base-cms-marko-web-theme-monorail/utils/content-meter-helpers";
 
-$ const { site, GAM } = out.global;
+$ const {
+  site,
+  GAM,
+  contentGatingHandler,
+  contentAccessState,
+  contentMeterState,
+  req,
+ } = out.global;
+
 $ const { id, type, pageNode, ...rest } = input;
 $ const sections = getAsArray(input, "sections");
+
+$ contentAccessState.setFormDisplay({ req });
+$ const { formId: idxFormId, displayForm: displayIdxForm, cookie: idxSuveyCookie } = contentAccessState;
+
+$ const showOverlay = shouldOverlay(contentMeterState);
 
 $ const showReadNextBlock = defaultValue(input.showReadNextBlock, true);
 $ const showBottomAdBlock = defaultValue(input.showBottomAdBlock, true);
@@ -82,13 +96,73 @@ $ const shouldInjectAds = GAM && GAM.enabled && ["article", "video", "news", "po
           />
         </else-if>
 
-        $ const requiresRegistration = get(content, "userRegistration.isCurrentlyRequired");
+        $ const requiresRegistration = contentGatingHandler({ content }) || restrictContentByReg(contentMeterState, contentGatingHandler, content);
         $ const accessLevels = getAsArray(content, "userRegistration.accessLevels");
         <marko-web-identity-x-access|context|
           enabled=requiresRegistration
           required-access-level-ids=accessLevels
         >
-          <if(!context.canAccess || context.requiresUserInput)>
+          $ const lazyloadFirstImage = displayPrimaryImage && content.primaryImage;
+          <if(idxFormId)>
+            <if(displayIdxForm)>
+              $ const body = getContentPreview({ body: content.body, selector: "p:lt(3)" });
+              <marko-web-content-body block-name=blockName obj={ body } />
+              <div class="content-page-preview-overlay" />
+              <marko-web-content-body block-name=blockName attrs={ style: "display: none;" } obj=content modifiers=["ld-json"] />
+                <marko-web-identity-x-context|{ hasUser, user, application }|>
+                <if(hasUser)>
+                  <marko-web-identity-x-form-access
+                    content=content
+                    user=user
+                    formId=idxFormId
+                    application=application
+                  />
+                </if>
+                <else>
+                  <marko-web-identity-x-non-auth-identify|{ user: identifiedUser }|>
+                    <marko-web-identity-x-form-access
+                      updateProfileOnSubmit=false
+                      content=content
+                      user=identifiedUser
+                      formId=idxFormId
+                      application=application
+                    />
+                  </marko-web-identity-x-non-auth-identify>
+                </else>
+              </marko-web-identity-x-context>
+            </if>
+            <else>
+              $ const bodyId = `content-body-${content.id}`;
+              <theme-body-with-injection
+                content=content
+                aliases=[]
+                block-name=blockName
+                selector=bodyId
+                preventHTMLInjection=true
+              />
+            </else>
+          </if>
+          <else-if(shouldOverlay(contentMeterState))>
+            $ const body = showOverlay ? getContentPreview({ body: content.body, selector: "p:lt(7)" }) : getContentPreview({ body: content.body, selector: "p:nth-of-type(1)" });
+            <marko-web-content-body block-name=blockName modifiers=bodyModifiers obj={ body } lazyload-first-image=lazyloadFirstImage />
+
+            <div class="content-page-preview-overlay" />
+            <if(!showOverlay)>
+              <theme-content-page-gate
+                can-access=context.canAccess
+                is-logged-in=context.isLoggedIn
+                has-required-access-level=context.hasRequiredAccessLevel
+                requires-access-level=context.requiresAccessLevel
+                requires-user-input=context.requiresUserInput
+                messages=context.messages
+                user-input-title="Step 2 of 2"
+                profile-call-to-action=""
+                profile-button-label="Create Account"
+                profile-event-name="content_meter_profile"
+              />
+            </if>
+          </else-if>
+          <else-if(!context.canAccess || context.requiresUserInput)>
             $ const body = getContentPreview({ body: content.body, selector: "p:nth-of-type(1)" });
             <marko-web-content-body block-name=blockName obj={ body } />
 
@@ -101,7 +175,7 @@ $ const shouldInjectAds = GAM && GAM.enabled && ["article", "video", "news", "po
               requires-user-input=context.requiresUserInput
               messages=context.messages
             />
-          </if>
+          </else-if>
           <else>
 
             $ const isSponsored = getAsArray(content, "labels").includes("Sponsored");
